# achkit

./: .gitattributes  .gitignore  LICENSE  RELEASE.md  RUNBOOK.md  reference.ach
.github/workflows/: ci.yml  publish-npm.yml  publish-pypi.yml
js/: README.md  package-lock.json  package.json  tsconfig.test.json
js/src/: client.ts  codes.ts  fields.ts  generate.ts  index.ts  model.ts  parse.ts  validate.ts
js/test/: roundtrip.test.ts
py/: pyproject.toml
py/achkit/: __init__.py  client.py  codes.py  fields.py  generate.py  parse.py  validate.py
py/tests/: test_achkit.py
site/: deploy.sh  nuxt.config.ts  package-lock.json  package.json
site/app/assets/css/: main.css
site/app/components/: AchStream.vue  AuthShell.vue  CheckoutModal.client.vue  GoogleButton.vue  HeroScene.client.vue  HeroScene.vue  HeroTower.client.vue  LegalShell.vue  MobileTabBar.vue  PipelineStory.client.vue  SiteFooter.vue  SiteHeader.vue  WhereItFits.vue
site/app/components/OgImage/: Brand.satori.vue
site/app/composables/: useAuth.ts  useCheckout.ts
site/app/pages/: contact.vue  dashboard.vue  docs.vue  hero-test.vue  index.vue  login.vue  privacy.vue  signup.vue  terms.vue
site/app/pages/billing/: success.vue
site/public/: hero.glb  hero.webm  llms.txt
site/scripts/: load-routing.mjs
site/server/api/: __health.get.ts  contact.post.ts  returns.post.ts  validate.post.ts  webhooks.get.ts  webhooks.post.ts
site/server/api/auth/: me.get.ts  (+5 more)
site/server/utils/: auth.ts  clickhouse.ts  keys.ts  mail.ts  returns.ts  routing.ts  rules.ts  spam.ts  store.ts  tiers.ts  webhooks.ts
(+9 files in other folders)
